@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-09T01:14:35Z",
+  "timestamp" : "2022-05-09T08:19:45Z",
   "count_outdated" : 260,
   "uniques_outdated" : 138,
-  "count" : 286,
-  "uniques" : 157,
+  "count" : 287,
+  "uniques" : 158,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -60,6 +60,13 @@
       "count_minmax": [ 0, 11 ],
       "uniques": 7,
       "uniques_minmax": [ 0, 7 ]
+    },
+    {
+      "timestamp": "2022-05-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
     }
   ]
 }
