@@ -1,5 +1,5 @@
 {
-  "count": 26,
+  "count": 27,
   "uniques": 13,
   "clones": [
     {
@@ -41,6 +41,11 @@
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 11,
       "uniques": 7
+    },
+    {
+      "timestamp": "2022-05-09T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
