@@ -1,3 +1,9 @@
+2022-05-09T08:19:45Z:
+* notice: last 14d: all unq: 27 13
+* notice: prev accum: outdated-all outdated-unq / all unq: 260 138 / 286 157
+* notice: next accum: outdated-all outdated-unq / all unq: 260 138 / 287 158
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +7 +10 / -0 -0
+
 2022-05-09T01:14:35Z:
 * notice: last 14d: all unq: 26 13
 * notice: prev accum: outdated-all outdated-unq / all unq: 260 138 / 277 151
